tests/NormalTests/paczka1/fuzzy1/19430348.err
Error in line 6: AcNH A475 72,21
Error in line 9: e572WSzxyJ A175 54,1
Error in line 16: e572WSzxyJ A475 72,8
Error in line 24: A475 S690 98,1
Error in line 27: SAfbe0nw0x1 S690 36,6
Error in line 20: it1W6U A475 89,7
Error in line 31: SAfbe0nw0x1 A475 65,8
Error in line 15: AcNH A475 328,1
